# python-ximalaya

./: .editorconfig  .pylintrc  Makefile  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/ximalaya/: client.py  typing.py
src/ximalaya/api/: user.py
