[tool.poetry]
name = "ximalaya"
version = "0.1.0"
description = "Python package for Ximalaya services."
authors = ["Garrett HE <garrett.he@outlook.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/garrett-he/python-ximalaya"
repository = "https://github.com/garrett-he/python-ximalaya.git"
keywords = ["ximalaya", "api", "service"]
packages = [{ include = "ximalaya", from = "src" }]
classifiers = []

[tool.poetry.dependencies]
python = ">=3.10"
jsonpath-ng = "^1.7.0"

[tool.poetry.group.dev.dependencies]
chance = "^0.110"
pre-commit = "^4.0.1"
pylint = "^3.3.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
tox = "^4.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
